# NCCoE.factory.pub

./: .gitignore  README.md  factory.sln
VaultIC-TLS/: CHANGES.TXT
VaultIC-TLS/certificates/: deviceCert.der  deviceCert.pem  deviceFactoryCert.der  deviceFactoryCert.pem  deviceKey.der  deviceKey.pem  rootCA.key  rootCACert.der  serverCert.der  serverKey.der
VaultIC-TLS/demos/: config.cfg  get_config.sh
VaultIC-TLS/demos/wolfssl/factory/: CMakeLists.txt  CMakeLists.vic.txt  CMakeLists.ztp.txt  factory.vcxproj  factory.vcxproj.filters  include.am
VaultIC-TLS/demos/wolfssl/factory/data/: inesConfig.rpi.ini  inesConfig.win.ini
VaultIC-TLS/demos/wolfssl/factory/data/Certs/: DeviceCert--.pem  DeviceCert.pem  README.txt  factory-old.csr  ines.api.pem  ines.api.priv.pem  ines.ca.cert.pem  pkey.pem
VaultIC-TLS/demos/wolfssl/factory/data/Certs/INeS API/: 5449F30B401CFE71BAF28E4DFEDA57BBF6455705_full.pem  api_credentials.txt  certificate_pfx_passphrase.txt  ines.api.priv.pem
VaultIC-TLS/demos/wolfssl/factory/include/: common.h  user_settings.h  user_settings.rpi.h  user_settings.win.h  wisekey_Crypto_Tools.h  wisekey_Http_Request_Manager.h  wisekey_Ines_Agent.h  wisekey_Ines_settings.h  wisekey_Tools.h  wisekey_ZTP_settings.h
VaultIC-TLS/demos/wolfssl/factory/lib/ini/: CMakeLists.txt  ini.c  ini.h
VaultIC-TLS/demos/wolfssl/factory/lib/json/: CMakeLists.txt
VaultIC-TLS/demos/wolfssl/factory/rpi/: main.c
VaultIC-TLS/demos/wolfssl/factory/src/: CMakeLists.txt  TestCsr.start.csr  main.c  wisekey_Crypto_Tools.c  wisekey_Http_Request_Manager.c  wisekey_Ines_Agent.c  wisekey_Tools.c
VaultIC-TLS/demos/wolfssl/factory/vaultic/: CMakeLists.txt  vaultic_csr.c  vaultic_csr.h  vaultic_factory.c
VaultIC-TLS/demos/wolfssl/factory/vaultic/test_data/: B163.h  B233.h  B283.h  B409.h  B571.h  K163.h  K233.h  K283.h  K409.h  K571.h  P192.h  P224.h  P256.h  P384.h  P521.h
VaultIC-TLS/demos/wolfssl/factory/win/: common.cpp  factory.cpp
VaultIC-TLS/demos/wolfssl/tls_client/: README.txt
VaultIC-TLS/demos/wolfssl/tls_client/scripts/: build.sh  install.sh  perso_client_vaultic.sh  run_client_vaultic.sh  run_server.sh
VaultIC-TLS/demos/wolfssl/tls_client/src/client_vaultic/: CMakeLists.txt  client_vaultic  main.c
VaultIC-TLS/demos/wolfssl/tls_client/src/server/: CMakeLists.txt  main.c
VaultIC-TLS/vaultic_tls/lib/windows/openssl/x86/: libssl.lib
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/: CMakeLists.txt
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/check_tls_perso/: CMakeLists.txt  main.c
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/dpp_keygen/: CMakeLists.txt  main.c
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/perso_factory/: CMakeLists.txt  main.c  perso_client.sh  perso_server.sh
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/perso_tls/: CMakeLists.txt  main.c  perso_client.sh
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/read_cert/: CMakeLists.txt  main.c
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/apps/sign/: CMakeLists.txt  main.c
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/docs/: VaultIC-TLS 405_API.chm  VaultIC-TLS 405_API.chw
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/include/: aardvark.h  certificate_typedef.h  vaultic_HMAC.h  vaultic_api.h  vaultic_bigdigits.h  vaultic_common.h  vaultic_config.h  vaultic_consts.h  vaultic_ecdsa_signer.h  vaultic_err.h  vaultic_errors.h  vaultic_file_system.h  vaultic_identity_authentication.h  vaultic_lib.h  vaultic_mem.h  vaultic_options.h  vaultic_structs.h  vaultic_tls.h  vaultic_tls_config.h  vaultic_typedefs.h  vaultic_utils.h  vaultic_version.h  x509parser.h
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/include/vaultic_405/: VaultIC_config.h  VaultIC_product.h  vaultic_api.h
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/include/vaultic_408/: VaultIC_config.h  VaultIC_product.h  vaultic_api.h
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/lib/Win32/: VaultIC405_API.lib  VaultIC408_API.lib
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/lib/so/Bookworm64/: libwolfssl.so.42
VaultIC-TLS/vaultic_tls/vaultic_tls-4xx/lib/so/Bullseye32/: libwolfssl.so.35  libwolfssl.so.35.5.1
scripts/: build.sh  factoryProvision.sh  install.sh  readCert.sh  signFactory.sh
wolfssl/: CMakeLists.txt  wolfssl.vcxproj  wolfssl.vcxproj.filters
wolfssl/wolfcrypt/src/port/wisekey/: vaultic.c
wolfssl/wolfssl/: options.h  ssl.h
wolfssl/wolfssl/wolfcrypt/: settings.h
wolfssl/wolfssl/wolfcrypt/port/wisekey/: vaultic.h
